--- a/Blockus-Client/View/ChatPage.xaml
+++ b/Blockus-Client/View/ChatPage.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Blockus_Client.View"
+      xmlns:p="clr-namespace:Blockus_Client.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="720" d:DesignWidth="300"
       Title="ChatPage">
@@ -15,8 +16,8 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         
-        <TextBlock Text="Chat grupal" Style="{StaticResource Normal_Text}" HorizontalAlignment="Center"/>
-        <Button Content="Cerrar" Style="{StaticResource Text_Button}" VerticalAlignment="Top" HorizontalAlignment="Right" Focusable="False"/>
+        <TextBlock Text="{x:Static p:Resources.ChatPage_title}" Style="{StaticResource Normal_Text}" HorizontalAlignment="Center"/>
+        <Button Content="{x:Static p:Resources.ChatPage_close}" Style="{StaticResource Text_Button}" VerticalAlignment="Top" HorizontalAlignment="Right" Focusable="False"/>
 
         <ScrollViewer Grid.Row="1" Margin="0 10" x:Name="Scroll_Messages">
             <StackPanel x:Name="StackPanel_Messages">
@@ -26,7 +27,7 @@
         
         <StackPanel  VerticalAlignment="Bottom" Grid.Row="2">
             <TextBox x:Name="TextBox_Message" Style="{StaticResource Normal_TextBox}" Height="45" MaxLength="150" TextWrapping="Wrap"/>
-            <Button Content="Enviar" Style="{StaticResource Normal_Button}" Click="Button_Click" Focusable="False"/>
+            <Button Content="{x:Static p:Resources.ChatPage_send}" Style="{StaticResource Normal_Button}" Click="Button_Click" Focusable="False"/>
         </StackPanel>
 
     </Grid>
